# dm-labs

./: .gitignore  CMakeLists.txt
src/term1/boolean_functions/: A.cpp  B.cpp  C.cpp  E.cpp  F.cpp  G.cpp  H.cpp
term1/boolean/: README.md
term1/boolean/src/: D.cpp
term1/coding/: README.md
term1/coding/src/: A.cpp  B.cpp  D.cpp  E.cpp  F.cpp
term1/combinatorics/: README.md
term1/combinatorics/src/: 01_allvectors.cpp  02_gray.cpp  03_antigray.cpp  04_chaincode.cpp  05_telemetry.cpp  06_vectors.cpp  07_permutations.cpp  08_choose.cpp  09_brackets.cpp  10_partition.cpp  11_subsets.cpp  12_part2sets.cpp  13_num2perm.cpp  14_perm2num.cpp  15_num2choose.cpp  16_choose2num.cpp  17_num2brackets.cpp  18_brackets2num.cpp  19_num2brackets2.cpp  20_brackets2num2.cpp  21_num2part.cpp  22_part2num.cpp  23_nextvector.cpp  24_nextperm.cpp  25_nextchoose.cpp  26_nextsetpartition.cpp  27_nextbrackets.cpp  28_nextmultiperm.cpp  29_nextpartition.cpp
term2/automata/: README.md
term2/automata/src/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
term2/cf-grammar/: README.md
term2/cf-grammar/src/: A.cpp  B.cpp  C.cpp  D.cpp
term3/graph/: README.md
term3/graph/src/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
term3/matroids/: README.md
term3/matroids/src/: A.cpp  C.cpp  D.cpp  E.cpp
term4/genfunction/: README.md
term4/genfunction/src/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
term4/turing/: README.md
term4/turing/src/: aplusb.out  balanced.out  convertto2.out  less.out  mirror.out  postfixlogic.out  reverse.out  (+2 more)
